<resources>
    <string name="app_name">Logistic</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="edittext_school">School</string>
    <string name="Button_Text">Submit</string>
    <string name="string_name">Logistic</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">UserDetails</string>

</resources>