<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
         <variable
             name="registerViewModel"
             type="com.pramod.logistic.viewmodel.RegisterViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register.RegisterActivity">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/string_name"
            android:textColor="@color/purple_500"
            android:textSize="25sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="180dp"
            android:background="@color/teal_200"
            android:orientation="vertical"
            android:padding="30dp">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:layout_marginBottom="@dimen/edittext_margin_bottam"
                android:background="@drawable/round"
                android:drawablePadding="@dimen/edittext_drawable_padding"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/edittext_min_hight"
                android:padding="@dimen/editext_padding"
                android:paddingLeft="@dimen/edittext_paddingleft"
                android:singleLine="true"
                android:text="@={registerViewModel.email}"
                android:textColor="@color/purple_500" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:layout_marginBottom="@dimen/edittext_margin_bottam"
                android:background="@drawable/round"
                android:drawablePadding="@dimen/edittext_drawable_padding"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:minHeight="@dimen/edittext_min_hight"
                android:importantForAutofill="no"
                android:text="@={registerViewModel.password}"
                android:inputType="textPassword"
                android:padding="@dimen/editext_padding"
                android:paddingLeft="@dimen/edittext_paddingleft"
                android:textColor="@color/purple_500" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:layout_marginBottom="@dimen/edittext_margin_bottam"
                android:background="@drawable/round"
                android:drawablePadding="@dimen/edittext_drawable_padding"
                android:fontFamily="sans-serif"
                android:hint="Name"
                android:minHeight="@dimen/edittext_min_hight"
                android:inputType="textPersonName"
                android:importantForAutofill="no"
                android:text="@={registerViewModel.name}"
                android:padding="@dimen/editext_padding"                android:paddingLeft="@dimen/edittext_paddingleft"
                android:textColor="@color/purple_500" />

            <EditText
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:layout_marginBottom="@dimen/edittext_margin_bottam"
                android:background="@drawable/round"
                android:drawablePadding="@dimen/edittext_drawable_padding"
                android:fontFamily="sans-serif"
                android:hint="@string/edittext_school"
                android:minHeight="@dimen/edittext_min_hight"
                android:importantForAutofill="no"
                android:text="@={registerViewModel.school}"
                android:inputType="textPersonName"
                android:padding="@dimen/editext_padding"
                android:paddingLeft="@dimen/edittext_paddingleft"
                android:textColor="@color/purple_500" />

            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/edittext_min_hight"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:layout_marginBottom="@dimen/edittext_margin_bottam"
                android:background="@color/black"
                android:padding="@dimen/editext_padding"
                android:onClick="@{()->registerViewModel.onRegister()}"
                android:text="@string/Button_Text"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>


    </RelativeLayout>
</layout>