<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.pramod.logistic.viewmodel.LoginViewModel" />
    </data>


    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.pramod.logistic.activity.LoginActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="180dp"
            android:layout_marginRight="15dp"
            android:background="@color/teal_200"
            android:orientation="vertical"

            android:padding="20dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:layout_marginBottom="@dimen/edittext_margin_bottam"
                android:background="@drawable/round"
                android:drawablePadding="@dimen/edittext_drawable_padding"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/edittext_min_hight"
                android:padding="@dimen/editext_padding"
                android:paddingLeft="@dimen/edittext_paddingleft"
                android:singleLine="true"
                android:text="@={loginViewModel.email}"
                android:textColor="@color/purple_500" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:layout_marginBottom="@dimen/edittext_margin_bottam"
                android:background="@drawable/round"
                android:drawablePadding="@dimen/edittext_drawable_padding"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="@dimen/edittext_min_hight"
                android:padding="@dimen/editext_padding"
                android:paddingLeft="@dimen/edittext_paddingleft"
                android:text="@={loginViewModel.password}"
                android:textColor="@color/purple_500" />


            <Button
                android:id="@+id/updateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edittext_margin_top"
                android:layout_marginBottom="@dimen/edittext_margin_bottam"
                android:background="@drawable/round"
                android:minHeight="@dimen/edittext_min_hight"
                android:onClick="@{()->loginViewModel.onLogin()}"
                android:padding="@dimen/editext_padding"
                android:text="@string/Button_Text"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRegister1"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:padding="@dimen/editext_padding"
                    android:text="User Register"
                    android:onClick="@{()->loginViewModel.onRegister()}"
                    android:textColor="@color/purple_500"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/textViewRegister2"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:padding="@dimen/editext_padding"
                    android:text="Forget User"
                    android:onClick="@{()->loginViewModel.onUserForget()}"
                    android:textAlignment="center"
                    android:textColor="@color/purple_500"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</layout>